# computer-science-studies

./: .gitmodules  README.md
BSc/1/introduction-to-programming/arytmetyka/: README.md  arytmetyka.ml  arytmetyka.mli
BSc/1/introduction-to-programming/iset/: .ocamlformat  README.md  iSet.ml
BSc/1/introduction-to-programming/leftist/: .ocamlformat  README.md  leftist.ml  testuj.sh
BSc/1/introduction-to-programming/origami/: .ocamlformat  README.md  origami.ml  origami.mli
BSc/1/introduction-to-programming/przelewanka/: .gitignore  .ocamlformat  README.md  przelewanka.ml
BSc/1/introduction-to-programming/topol/: .ocamlformat  README.md  pMap.ml  pMap.mli  testuj.sh  topol.ml  topol.mli
BSc/1/object-programming/: .gitignore  README.md
BSc/1/object-programming/Speed Comparison/: po.tar.xz  raport.txt  test.sh  test.txt
BSc/1/object-programming/Ćwiczenia/: run.sh
BSc/1/usefull-algo/KMP/: CMakeLists.txt  KMP.cpp  KMP.h  main.cpp
BSc/1/usefull-algo/find and union/: fu.c  fu.cpp
BSc/1/usefull-algo/grafy/: CMakeLists.txt  main.cpp
BSc/1/usefull-algo/grafy/dijkstra/: main.cpp
BSc/1/usefull-algo/grafy/graph/: graph.h
BSc/1/www-apps/: README.md
BSc/1/www-apps/Praca domowa 1/: index.html  package-lock.json  package.json  webpack.config.js
BSc/1/www-apps/egzamin/: README.md  app.ts  package-lock.json  package.json
BSc/1/www-apps/js/: main.js  main.js.map  quiz.js.map
BSc/1/www-apps/lab 2/: index.html  single.html
BSc/1/www-apps/lab 3/: index.html  single.html
BSc/1/www-apps/lab 4/: index.html  reservation_accomplished.html
BSc/1/www-apps/lab 5/: index.html  reservation_accomplished.html  single.html
BSc/1/www-apps/lab 6+7/: index.html  package-lock.json  package.json  single.html  tsconfig.json  webpack.config.js
BSc/1/www-apps/lab10+11/: Meme.ts  login.ts  main.ts  memes.sqlite  memes.ts  package-lock.json  package.json  sessions
BSc/1/www-apps/lab9/: Meme.ts  main.ts  memes.ts  package-lock.json  package.json  tsconfig.json
BSc/1/www-apps/nowy_projekt/: main.js  main.js.map  main.ts  package.json  tsconfig.json
BSc/1/www-apps/pd2/: Quiz.ts  db.ts  login.ts  main.ts  package-lock.json  package.json  quizes.sqlite  quizes.ts  results.ts  sessions  tsconfig.json
BSc/2/algorithms-and-data-structures/: README.MD
BSc/2/algorithms-and-data-structures/Klasówka 2/: zad 1.odt  zad3.odt
BSc/2/algorithms-and-data-structures/Potyczki Algorytmiczne 2020/: CMakeLists.txt
BSc/2/algorithms-and-data-structures/Potyczki Algorytmiczne 2020/Day 1/: B.cpp  C.cpp
BSc/2/algorithms-and-data-structures/Potyczki Algorytmiczne 2020/Day 2/: B.cpp  C.cpp
BSc/2/algorithms-and-data-structures/Potyczki Algorytmiczne 2020/Day 3/: B.cpp  C.cpp
BSc/2/algorithms-and-data-structures/Potyczki Algorytmiczne 2020/Day 4/: C.cpp  mal  test.sh
BSc/2/algorithms-and-data-structures/Potyczki Algorytmiczne 2020/Day 4/tests/: test1.in  test1.out  test10.in  test10.out  test100.in  test100.out  test101.in  test101.out  test102.in  test102.out  test103.in  test103.out  test104.in  test104.out  test105.in  test105.out  test106.in  test106.out  test107.in  test107.out  test108.in  test108.out  test109.in  test109.out  test11.in  test11.out  test110.in  test110.out  test111.in  test111.out  test112.in  test112.out  test113.in  test113.out  test114.in  test114.out  test115.in  test115.out  test116.in  test116.out  (+348 more)
BSc/2/algorithms-and-data-structures/Potyczki Algorytmiczne 2020/Day 5/: A2.cpp  B1.cpp  C1.cpp  C2.cpp
BSc/2/computer-networks/Laby/lab6/: CMakeLists.txt  file-client-tcp.c  file-server-tcp.c  preforked_server.c  proc_server.c  reuse_server.c  test.sh  thread_server.c
BSc/2/computer-networks/Laby/lab6/libancillary/: proc_server.c  test.c
BSc/2/computer-networks/Laby/lab7/: CMakeLists.txt  poll_server.c  poll_server_telnet.c
BSc/2/computer-networks/Laby/lab7/nonblocking/: CMakeLists.txt  echo-client-timeout.c  echo-server-nonblocking.c
BSc/2/creating-apps-extended/: README.md
BSc/2/microcontollers-programming/: README.MD
BSc/2/programming-languages-and-tools/JNP1_7/: .clang-format  CMakeLists.txt  README.md  bezier.h  bezier_example.cc
BSc/3/distributed-systems/: .gitignore  README.md  SRpack.sh
MSc/1/advanced-operating-systems/: .gitignore  .gitmodules  README.md
MSc/1/advanced-operating-systems/Assignments/1/: .clang-format  .gitignore  CMakeLists.txt  README.md  elfdiff.sh  main.cpp
MSc/1/advanced-operating-systems/Assignments/1/qemu/: run_arm64.sh
MSc/1/advanced-operating-systems/Assignments/1/z1_test/: mk_converter.sh
MSc/1/compiler-construction/: README.md
MSc/1/high-performance-computing/: .gitignore  README.md
MSc/1/high-performance-computing/Assignments/ca3dmm/: CMakeLists.txt  README.md  main.cpp  param_test.cpp  params.cpp  params.hpp  prometheus_build.sh  prometheus_run.sh  types.hpp  zip.sh
MSc/1/high-performance-computing/Assignments/ca3dmm/tests/: fix_debug.sh  param_tests  params.py
MSc/1/high-performance-computing/Assignments/ca3dmm/tests/dw/: out  test.sh
MSc/1/high-performance-computing/Assignments/ca3dmm/tests/kr1/: out  test.sh
MSc/1/high-performance-computing/Assignments/ca3dmm/tests/kr2/: out  test.sh
MSc/1/high-performance-computing/Assignments/ca3dmm/tests/kr3/: out  test.sh
MSc/1/high-performance-computing/Assignments/ca3dmm/tests/novazzy_test/: novazzy_big.in  novazzy_medium.in  novazzy_small.in
MSc/1/high-performance-computing/Assignments/ca3dmm/tests/verify/python/: batch_verify.sh  util.py  verify.py
MSc/1/high-performance-computing/Assignments/ca3dmm/tests/verify/verimat/: ge_10_6_4_1.txt  ge_30_30_20_5.txt  ge_500_150_50_12.txt  ge_6_6_80_20.txt  mat_10_6_4.txt  mat_30_30_20.txt  mat_500_150_50.txt  mat_6_6_80.txt
MSc/1/high-performance-computing/Assignments/k-clique/: CMakeLists.txt  Makefile  Report.md  kcliques.cu
MSc/1/high-performance-computing/Lab/tbb-lab-01/: CMakeLists.txt  nqueens-par-count.cpp  nqueens-par.cpp
MSc/1/logic/: README.md
MSc/1/logic/FO-prover/: .gitignore  CHANGELOG.md  FO-prover.cabal  FO-prover.hs  Formula.hs  LICENSE  Makefile  Utils.hs  run_tests.sh
(+586 files in other folders)
