cmake_minimum_required(VERSION 3.17)
project(Potyczki_Algorytmiczne_2020)

set(CMAKE_CXX_STANDARD 17)

add_executable(1A "Day 1/A.cpp")
add_executable(1B "Day 1/B.cpp")
add_executable(1C "Day 1/C.cpp")

add_executable(2A "Day 2/A.cpp")
add_executable(2B "Day 2/B.cpp")
add_executable(2C "Day 2/C.cpp")

add_executable(3A "Day 3/A.cpp")
add_executable(3B "Day 3/B.cpp")
add_executable(3C "Day 3/C.cpp")

add_executable(4A "Day 4/A.cpp")
add_executable(4B "Day 4/B.cpp")
add_executable(4C "Day 4/C.cpp")

add_executable(5A1 "Day 5/A1.cpp")
add_executable(5B1 "Day 5/B1.cpp")
add_executable(5C1 "Day 5/C1.cpp")

add_executable(5A2 "Day 5/A2.cpp")
add_executable(5B2 "Day 5/B2.cpp")
add_executable(5C2 "Day 5/C2.cpp")