cabal-version:      3.0
name:               FO-prover
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Hubert Badocha
maintainer:         badocha.hubert@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable FO-prover
    main-is:          FO-prover.hs

    -- Modules included in this executable, other than Main.
    other-modules:
                      Formula,
                      Parser,
                      Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.13.0.0,
                      QuickCheck > 2.14,
                      parsec > 3.1, 
                      mtl > 2.2,
                      random > 1.2,
                      containers > 0.6.5
    -- hs-source-dirs:   app
    default-language: Haskell2010
